--- a/my-app/HTML/menuUser.html
+++ b/my-app/HTML/menuUser.html
@@ -39,13 +39,13 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-person" viewBox="0 0 24 24">
                             <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zM12 14c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/>
                         </svg>
-                        <span>User</span>
+                        <span id="nombre-usuario">User</span>
                         <svg id="chevron-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-down" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
                         </svg>
                     </button>
                     <ul class="profile-dropdown" id="profile-dropdown">
-                        <li><a href="/index.html">Cerrar Sesión</a></li>
+                        <li><a href="/index.html" onclick="cerrarSesion()">Cerrar Sesión</a></li>
                     </ul>
                     <script>
                         document.getElementById('profile-btn').addEventListener('click', function() {
@@ -103,7 +103,7 @@
                     </svg>
                 </a>
             </div>
-             <!--Ya empieza todo dentro de los el menu-->
+            <!--Ya empieza todo dentro de los el menu-->
              
             <div class="projects-section scrollable">
                 <div class="projects-section-header" style="margin-bottom: 0px;">
@@ -584,14 +584,26 @@ function eliminarReserva(codigoReserva) {
     }).then((result) => {
         if (result.isConfirmed) {
             fetch(`/api/reserva/${codigoReserva}`, {
-                method: 'DELETE'
+                method: 'DELETE',
+                headers: { 'Content-Type': 'application/json' }
             })
-            .then(response => response.json())
-            .then(() => {
-                Swal.fire('Eliminado', 'La reserva ha sido eliminada.', 'success')
-                    .then(() => location.reload());
+            .then(response => {
+                if (!response.ok) {
+                    return response.json().then(err => {
+                        console.error('Error del servidor:', err);
+                        throw new Error(err.message || 'Error al eliminar la reserva');
+                    });
+                }
+                return response.json();
             })
-            .catch(error => console.error('Error al eliminar la reserva:', error));
+            .then(data => {
+                Swal.fire('Eliminado', data.message, 'success')
+                    .then(() => location.reload()); // Recargar la página para actualizar la tabla
+            })
+            .catch(error => {
+                console.error('Error al eliminar la reserva:', error);
+                Swal.fire('Error', 'No se pudo eliminar la reserva. Intenta nuevamente.', 'error');
+            });
         }
     });
 }
@@ -823,7 +835,49 @@ function eliminarReserva(codigoReserva) {
         }
     }
 
-   
+    function iniciarSesion() {
+    const nombreUsuario = document.getElementById('nombreUsuario').value;
+    const password = document.getElementById('password').value;
+
+    fetch('/api/login', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ nombreUsuario, password })
+    })
+    .then(response => {
+        if (!response.ok) {
+            return response.json().then(err => {
+                throw new Error(err.message || 'Error al iniciar sesión');
+            });
+        }
+        return response.json();
+    })
+    .then(data => {
+        if (data.success) {
+            // Guardar el nombre de usuario en localStorage
+            localStorage.setItem('nombreUsuario', data.nombreUsuario);
+
+            // Redirigir a la URL proporcionada
+            window.location.href = data.redirect;
+        } else {
+            Swal.fire('Error', data.message, 'error');
+        }
+    })
+    .catch(error => {
+        console.error('Error al iniciar sesión:', error);
+        Swal.fire('Error', 'No se pudo iniciar sesión. Intenta nuevamente.', 'error');
+    });
+}
+
+    document.addEventListener('DOMContentLoaded', () => {
+    const nombreUsuario = localStorage.getItem('nombreUsuario');
+    if (nombreUsuario) {
+        document.getElementById('nombre-usuario').textContent = nombreUsuario;
+    }
+});
+function cerrarSesion() {
+            localStorage.removeItem('nombreUsuario');
+        }
 </script>
 </body>
 </html>
