arreglos de tareas y userID

--- a/my-app/HTML/habitaciones.html
+++ b/my-app/HTML/habitaciones.html
@@ -97,6 +97,13 @@
             <line x1="8" y1="2" x2="8" y2="6" />
             <line x1="3" y1="10" x2="21" y2="10" /></svg>
             </a>
+            <a href="/HTML/minibar.html" class="app-sidebar-link">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-glass">
+                    <path d="M21 2H3"></path>
+                    <path d="M17 2l-2 14H9L7 2"></path>
+                    <path d="M9 22h6"></path>
+                </svg>
+            </a>
         <!--Aqui es el icono de la cuenta-->
         <a href="/HTML/cuenta.html" class="app-sidebar-link">
             <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="feather feather-file-text" viewBox="0 0 24 24">
