--- a/my-app/HTML/tareasUser.html
+++ b/my-app/HTML/tareasUser.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tareas</title>
     <link rel="shortcut icon" href="/IMAGENES/iconSena.png">
     <link rel="stylesheet" href="/CSS/tareas.css">
@@ -81,6 +81,13 @@
                         <line x1="16" y="2" x2="16" y2="6" />
                         <line x1="8" y="2" x2="8" y2="6" />
                         <line x1="3" y1="10" x2="21" y2="10" />
+                    </svg>
+                </a>
+                <a href="/HTML/minibarUser.html" class="app-sidebar-link">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-glass">
+                        <path d="M21 2H3"></path>
+                        <path d="M17 2l-2 14H9L7 2"></path>
+                        <path d="M9 22h6"></path>
                     </svg>
                 </a>
                 <a href="/HTML/cuentaUser.html" class="app-sidebar-link">
@@ -265,17 +272,17 @@
         // Función para cargar las tareas existentes
         function cargarTareas() {
             fetch('/api/tareas')
-            .then(response => response.json())
-            .then(data => {
-                const taskList = document.getElementById('task-list');
-                taskList.innerHTML = ''; // Limpiar la lista de tareas
-                data.forEach(tarea => {
-                    agregarTareaALaLista(tarea.id, tarea.descripcion);
+                .then(response => response.json())
+                .then(data => {
+                    const taskList = document.getElementById('task-list');
+                    taskList.innerHTML = ''; // Limpiar la lista de tareas
+                    data.forEach(tarea => {
+                        agregarTareaALaLista(tarea.id, tarea.descripcion);
+                    });
+                })
+                .catch(error => {
+                    console.error('Error al cargar las tareas:', error);
                 });
-            })
-            .catch(error => {
-                console.error('Error al cargar las tareas:', error);
-            });
         }
 
 // Función para guardar las observaciones en localStorage
