--- a/my-app/HTML/administrador.html
+++ b/my-app/HTML/administrador.html
@@ -102,6 +102,13 @@
                         <line x1="3" y1="10" x2="21" y2="10" />
                     </svg>
                 </a>
+                <a href="/HTML/minibar.html" class="app-sidebar-link">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-glass">
+                        <path d="M21 2H3"></path>
+                        <path d="M17 2l-2 14H9L7 2"></path>
+                        <path d="M9 22h6"></path>
+                    </svg>
+                </a>
                 <!--Aqui es el icono de la cuenta-->
                 <a href="/HTML/cuenta.html" class="app-sidebar-link">
                     <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
