--- a/my-app/HTML/cuenta.html
+++ b/my-app/HTML/cuenta.html
@@ -76,6 +76,13 @@
                         <line x1="3" y1="10" x2="21" y2="10" />
                     </svg>
                 </a>
+                <a href="/HTML/minibar.html" class="app-sidebar-link">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-glass">
+                        <path d="M21 2H3"></path>
+                        <path d="M17 2l-2 14H9L7 2"></path>
+                        <path d="M9 22h6"></path>
+                    </svg>
+                </a>
                 <a href="" class="app-sidebar-link active">
                     <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="feather feather-file-text" viewBox="0 0 24 24">
                         <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z" />
