--- a/my-app/HTML/habitacionesUser.html
+++ b/my-app/HTML/habitacionesUser.html
@@ -80,9 +80,16 @@
         <a href="/HTML/tareasUser.html" class="app-sidebar-link ">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-calendar">
             <rect x="3" y="4" width="18" height="18" rx="2" ry="2" />
-            <line x1="16" y1="2" x2="16 y2="6" />
-            <line x1="8" y1="2" x2="8 y2="6" />
-            <line x1="3" y1="10" x2="21 y2="10" /></svg>
+            <line x1="16" y1="2" x2="16" y2="6" />
+            <line x1="8" y1="2" x2="8" y2="6" />
+            <line x1="3" y1="10" x2="21" y2="10" /></svg>
+            </a>
+            <a href="/HTML/minibarUser.html" class="app-sidebar-link">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-glass">
+                    <path d="M21 2H3"></path>
+                    <path d="M17 2l-2 14H9L7 2"></path>
+                    <path d="M9 22h6"></path>
+                </svg>
             </a>
         <!--Aqui es el icono de la cuenta-->
         <a href="/HTML/cuentaUser.html" class="app-sidebar-link">
@@ -90,8 +97,8 @@
                 <defs />
                 <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z" />
                 <polyline points="14 2 14 8 20 8" />
-                <line x1="16" y1="13" x2="8 y2="13" />
-                <line x1="16" y1="17" x2="8 y2="17" />
+                <line x1="16" y1="13" x2="8" y2="13" />
+                <line x1="16" y1="17" x2="8" y2="17" />
                 <polyline points="10 9 9 9 8 9" />
             </svg>
         </a>
