--- a/my-app/HTML/minibarUser.html
+++ b/my-app/HTML/minibarUser.html
@@ -34,7 +34,7 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-person" viewBox="0 0 24 24">
                             <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zM12 14c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/>
                         </svg>
-                        <span id="nombre-usuario">ADMIN</span>
+                        <span id="nombre-usuario">Usuario</span>
                         <svg id="chevron-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-down" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
                         </svg>
@@ -54,19 +54,19 @@
         <!--Aqui es el iconos de navegar-->
         <div class="app-content">
             <div class="app-sidebar" id="app-sidebar">
-                <a href="/HTML/menu.html" class="app-sidebar-link">
+                <a href="/HTML/menuUser.html" class="app-sidebar-link">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home">
                         <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z" />
                         <polyline points="9 22 9 12 15 12 15 22" /></svg>
                 </a>
                 <!--Aqui es el icono de la persona-->
-                <a href="/HTML/huesped.html" class=app-sidebar-link>
+                <a href="/HTML/huespedUser.html" class=app-sidebar-link>
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-person" viewBox="0 0 24 24">
                         <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zM12 14c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/>
                     </svg>
                 </a>
                 <!--Aqui es el icono de la habitaciones-->
-                <a href="/HTML/habitaciones.html" class="app-sidebar-link">
+                <a href="/HTML/habitacionesUser.html" class="app-sidebar-link">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bed">
                         <path d="M3 7h18v10H3z" />
                         <path d="M3 7v10" />
@@ -77,7 +77,7 @@
                     </svg>
                 </a>
                 <!--Aqui es el icono de la tareas-->
-                <a href="/HTML/tareas.html" class="app-sidebar-link ">
+                <a href="/HTML/tareasUser.html" class="app-sidebar-link ">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-calendar">
                         <rect x="3" y="4" width="18" height="18" rx="2" ry="2" />
                         <line x1="16" y1="2" x2="16" y2="6" />
@@ -92,7 +92,7 @@
                     </svg>
                 </a>
                 <!--Aqui es el icono de la cuenta-->
-                <a href="/HTML/cuenta.html" class="app-sidebar-link">
+                <a href="/HTML/cuentaUser.html" class="app-sidebar-link">
                     <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="feather feather-file-text" viewBox="0 0 24 24">
                         <defs />
                         <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z" />
@@ -100,11 +100,6 @@
                         <line x1="16" y1="13" x2="8" y2="13" />
                         <line x1="16" y1="17" x2="8" y2="17" />
                         <polyline points="10 9 9 9 8 9" />
-                    </svg>
-                </a>
-                <a href="/HTML/administrador.html" class="app-sidebar-link">
-                    <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="feather feather-pie-chart" viewBox="0 0 24 24">
-                        <path d="M21.21 15.89A10 10 0 118 2.83M22 12A10 10 0 0012 2v10z" />
                     </svg>
                 </a>
             </div>
@@ -131,6 +126,7 @@
                                 <option value="bebidas-energeticas">Bebidas energéticas</option>
                                 <option value="galletas">Galletas</option>
                                 <option value="golosinas">Golosinas</option>
+                                <option value="snaks">Snaks</option>
                                 <option value="gaseosas">Gaseosas</option>
                                 <option value="paqueteria">Paquetería</option>
                             </select>
@@ -166,6 +162,7 @@
                     <option value="bebidas-energeticas">Bebidas energéticas</option>
                     <option value="galletas">Galletas</option>
                     <option value="golosinas">Golosinas</option>
+                    <option value="snaks">Snaks</option>
                     <option value="gaseosas">Gaseosas</option>
                     <option value="paqueteria">Paquetería</option>
                 </select>
@@ -176,7 +173,7 @@
                 <label for="productQuantity">Cantidad:</label>
                 <input type="number" id="productQuantity" name="productQuantity" required>
                 
-                <button type="submit" class="add-product-btn">Guardar cambios</button>
+                <button type="submit" class="add-product-btn">Agregar producto</button>
             </form>
             <div id="formMessage" style="margin-top: 10px;"></div> <!-- Mensaje de estado -->
         </div>
@@ -221,8 +218,6 @@
             <div id="unassignFormMessage" style="margin-top: 10px;"></div> <!-- Mensaje de estado -->
         </div>
     </div>
-
-    <script src="/JS/minibar.js"></script>
     <script>
         // Alternar entre modo oscuro y claro
         document.querySelector('.mode-switch').addEventListener('click', function() {
@@ -236,7 +231,60 @@
             sidebar.classList.toggle('hidden');
         });
 
+        // Cargar productos al cargar la página
+        document.addEventListener('DOMContentLoaded', function() {
+            loadProducts();
+        });
 
+        // Manejar la búsqueda de productos
+        document.getElementById('searchBtn').addEventListener('click', function() {
+            searchProducts();
+        });
+function openEditModal(productId) {
+    const editModal = document.getElementById('productModal');
+    editModal.style.display = 'block';
+
+    // Hacer una solicitud al backend para obtener los datos del producto
+    fetch(`/api/productos/${productId}`)
+        .then(response => {
+            if (!response.ok) {
+                throw new Error(`HTTP error! status: ${response.status}`);
+            }
+            return response.json();
+        })
+        .then(product => {
+            // Llenar el formulario del modal con los datos del producto
+            document.getElementById('productName').value = product.nombre;
+            document.getElementById('productRef').value = product.referencia;
+            document.getElementById('productPrice').value = product.precio;
+            document.getElementById('productQuantity').value = product.cantidad;
+
+            // Configurar el atributo data-product-id en el formulario
+            document.getElementById('productForm').setAttribute('data-product-id', productId);
+
+            // Cambiar el evento de envío del formulario para actualizar el producto
+            document.getElementById('productForm').onsubmit = function (event) {
+                event.preventDefault();
+                updateProduct(productId);
+            };
+        })
+        .catch(error => {
+            console.error('Error al cargar los datos del producto:', error);
+        });
+}
+
+
+        function cerrarSesion() {
+            localStorage.removeItem('nombreUsuario');
+        }
+        document.addEventListener('DOMContentLoaded', () => {
+            const nombreUsuario = localStorage.getItem('nombreUsuario');
+            if (nombreUsuario) {
+                document.getElementById('nombre-usuario').textContent = nombreUsuario;
+            }
+        });
+        // Exponer la función al ámbito global
+window.openEditModal = openEditModal;
     </script>
 </body>
 </html>
